--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
 
@@ -36,11 +36,11 @@
         <li><a href="#">Projects</a></li>
         <li><a href="#">Blog</a></li>
       </ul>
-
+    
 
       <form class="search">
-        <label aria-label="Search query"></label><!-- REVIEW: nu is niet te achterhalen waar dit label bij hoort. Gebruik het for attribuut hiervoor -->
-        <input type="search" name="q" placeholder="Search query"><!-- REVIEW: hier moet de aria-label worden toegevoegd -->
+        <label for="search-input"></label>
+        <input type="search" name="q" id="search-input" placeholder="Search query" aria-label="Search query">
         <input type="submit" value="Go!">
       </form>
     </nav>
@@ -48,7 +48,7 @@
     <main>
       <article>
         <!-- <font size="6">The trouble with Bears</font> -->
-        <h1>The trouble with Bears</h1>
+        <h2>The trouble with Bears</h2>
         <!-- <br><br>
         By Evan Wild
         <br><br>
@@ -68,15 +68,22 @@
         <br><br> -->
         <p>Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub)from another species.</p>
         <p> Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.</p>
-        <table><!-- REVIEW: geen caption of summary -->
+        <table>
+          <caption>Types of bear</caption>
           <thead>
             <tr>
-              <td>Bear Type</td><!-- REVIEW: dit zijn tabelheaders, hiervoor is een speciale tag. Ook is er een attribuut om aan te geven of het een rij- of kolomhoofd is. -->
+              <!-- <td>Bear Type</td>
               <td>Coat</td>
               <td>Adult size</td>
               <td>Habitat</td>
               <td>Lifespan</td>
-              <td>Diet</td>
+              <td>Diet</td> -->
+              <th scope="col">Bear Type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
           <tbody>
@@ -132,7 +139,7 @@
         <p>He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.</p>
         </aside>
         <section class="comments">
-          <div class="show-hide">Show comments</div><!-- REVIEW: deze is nog niet keyboard accessible -->
+          <button class="show-hide">Show comments</button>
 
           <div class="comment-wrapper">
 
@@ -141,11 +148,11 @@
 
             <form class="comment-form">
               <div class="flex-pair">
-                <label for="">Your name:</label><!-- REVIEW: verkeerd gekoppeld -->
-                <input type="text" name="name" id="name" placeholder="Enter your name"><!-- REVIEW: geen aria-label -->
+                <label for="name">Your name:</label>
+                <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
               <div class="flex-pair">
-                <label for="">Your comment:</label>
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
               <div>
@@ -190,7 +197,7 @@
       <p>©Copyright 2050 by nobody. All rights reversed.</p>
     </footer>
 
-
+    
 
   </body>
 </html>
